<resources>
    <string name="app_name">Task_Project</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_login">login_activity</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_signup">signup_activity</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
</resources>