<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/Page_title"
        android:text="@string/sign_up"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create an account. It's free"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/very_large_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="@dimen/normal_margin"
        />
    <EditText
        style="@style/Input_text"
        android:inputType="text"
        android:layout_marginBottom="@dimen/large_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="@dimen/normal_margin"
        />
    <EditText
        style="@style/Input_text"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/large_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="@dimen/normal_margin"
        />
    <EditText
        style="@style/Input_text"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/large_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginStart="@dimen/normal_margin"
        />
    <EditText
        style="@style/Input_text"
        android:inputType="textPassword"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        style="@style/Button"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/very_large_margin"
        android:layout_marginBottom="@dimen/normal_margin"
     />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/normal_padding"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? "/>
        <TextView android:id="@+id/Go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:clickable="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>

