<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/Page_title"
        android:text="@string/login"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login to your account"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/normal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="@dimen/normal_margin"
        />
    <EditText
        style="@style/Input_text"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/normal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="@dimen/normal_margin"

        />
    <EditText
        style="@style/Input_text"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/normal_margin"
        />
    <Button
        style="@style/Button"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/normal_margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "/>
        <TextView android:id="@+id/Go_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:clickable="true"
            android:textColor="@color/black"
            android:textSize="24sp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/background"
        android:layout_weight="1"/>
</LinearLayout>